[package]
name = "link2lan"
version = "0.5.2"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
futures-util = "0.3.32"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
reqwest-websocket = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
stunclient = "0.4.2"
tokio = {version="1.50.0", features= ["full"]}
tokio-tungstenite = "0.29.0"
